--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   google_fonts: ^6.3.3
   json_annotation: ^4.9.0
   build_runner: ^2.10.4
+  dio: ^5.9.0
+  dio_cookie_manager: ^3.3.0
+  cookie_jar: ^4.0.8
+  path_provider: ^2.1.5
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
