--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   cookie_jar: ^4.0.8
   path_provider: ^2.1.5
   flutter_riverpod: ^2.6.1
+  transparent_image: ^2.0.1
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
